--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.21",
+        "axios": "^0.21.4",
         "bootstrap": "^5.1.3",
         "jquery": "^1.9.1",
         "laravel-mix": "^6.0.6",
@@ -27,6 +27,8 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.4",
-        "admin-lte": "3.1"
+        "admin-lte": "3.1",
+        "vform": "^2.1.2",
+        "vue-router": "^3.5.3"
     }
 }
