--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
         "@fortawesome/fontawesome-free": "^5.15.4",
         "admin-lte": "3.1",
         "moment": "^2.29.1",
+        "sweetalert2": "^11.4.0",
         "vform": "^2.1.2",
+        "vue-progressbar": "^0.7.5",
         "vue-router": "^3.5.3"
     }
 }
